{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 23,
  "lineage": "b52ae313-9d79-e2ef-5601-020c056604de",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-008c9eb5a088a8cee",
            "arn": "arn:aws:ec2:us-east-1:833185305640:elastic-ip/eipalloc-008c9eb5a088a8cee",
            "associate_with_private_ip": "192.168.1.10",
            "association_id": "eipassoc-051780fd4fe07f9c3",
            "domain": "vpc",
            "id": "eipalloc-008c9eb5a088a8cee",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0551d1423f4a7b6fc",
            "private_dns": "ip-192-168-1-10.ec2.internal",
            "private_ip": "192.168.1.10",
            "public_dns": "ec2-44-195-249-149.compute-1.amazonaws.com",
            "public_ip": "44.195.249.149",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.interface1",
            "aws_security_group.allow_rules",
            "aws_subnet.Terraform_Pub_Subnet",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Terraform_webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ecb62995f68bb549",
            "arn": "arn:aws:ec2:us-east-1:833185305640:instance/i-08c1103a639d3270c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08c1103a639d3270c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "awesome-key-east1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0551d1423f4a7b6fc"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": false,
                "network_interface_id": "eni-0551d1423f4a7b6fc"
              }
            ],
            "primary_network_interface_id": "eni-0551d1423f4a7b6fc",
            "private_dns": "ip-192-168-1-10.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.10",
            "public_ip": "44.195.249.149",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-004f8f30dab880836",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-071e13655321b22bc",
            "tags": {
              "Name": "Apache_web_Server"
            },
            "tags_all": {
              "Name": "Apache_web_Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0717eb79b07b4ac7e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "833185305640",
            "id": "i-08c1103a639d3270c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_network_interface.interface1",
            "aws_security_group.allow_rules",
            "aws_subnet.Terraform_Pub_Subnet",
            "aws_vpc.terraform_vpc",
            "data.aws_key_pair.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:833185305640:internet-gateway/igw-0dca6c6f12cfc4acc",
            "id": "igw-0dca6c6f12cfc4acc",
            "owner_id": "833185305640",
            "region": "us-east-1",
            "tags": {
              "Name": "Terraform_gw"
            },
            "tags_all": {
              "Name": "Terraform_gw"
            },
            "vpc_id": "vpc-0c2bada79d9f46e13"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "interface1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:833185305640:network-interface/eni-0551d1423f4a7b6fc",
            "id": "eni-0551d1423f4a7b6fc",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:32:44:63:a0:71",
            "owner_id": "833185305640",
            "private_ip": "192.168.1.10",
            "private_ip_list": [
              "192.168.1.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "192.168.1.10"
            ],
            "private_ips_count": 0,
            "region": "us-east-1",
            "security_groups": [
              "sg-0717eb79b07b4ac7e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-071e13655321b22bc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.allow_rules",
            "aws_subnet.Terraform_Pub_Subnet",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:833185305640:route-table/rtb-06d964719d1755ea7",
            "id": "rtb-06d964719d1755ea7",
            "owner_id": "833185305640",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dca6c6f12cfc4acc",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dca6c6f12cfc4acc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terra_route_table"
            },
            "tags_all": {
              "Name": "Terra_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2bada79d9f46e13"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "833185305640",
            "id": "rtb-06d964719d1755ea7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026ab6f6df62da821",
            "region": "us-east-1",
            "route_table_id": "rtb-06d964719d1755ea7",
            "subnet_id": "subnet-071e13655321b22bc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_route_table",
            "aws_subnet.Terraform_Pub_Subnet",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:833185305640:security-group/sg-0717eb79b07b4ac7e",
            "description": "Allow this inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0717eb79b07b4ac7e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "134.41.221.117/32"
                ],
                "description": "allow ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Terraform_custom-web-sg",
            "name_prefix": "",
            "owner_id": "833185305640",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Terraform_custom-web-sg"
            },
            "tags_all": {
              "Name": "Terraform_custom-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2bada79d9f46e13"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "833185305640",
            "id": "sg-0717eb79b07b4ac7e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Terraform_Pub_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:833185305640:subnet/subnet-071e13655321b22bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071e13655321b22bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "833185305640",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "terraform-public-subnet"
            },
            "tags_all": {
              "Name": "terraform-public-subnet"
            },
            "vpc_id": "vpc-0c2bada79d9f46e13"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "833185305640",
            "id": "subnet-071e13655321b22bc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:833185305640:vpc/vpc-0c2bada79d9f46e13",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-04da88af71278c93f",
            "default_route_table_id": "rtb-0714ee3910c80c61d",
            "default_security_group_id": "sg-0e09d0b06d8c7ba7c",
            "dhcp_options_id": "dopt-002290df88ceab11f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c2bada79d9f46e13",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0714ee3910c80c61d",
            "owner_id": "833185305640",
            "region": "us-east-1",
            "tags": {
              "Name": "terraform_vpc"
            },
            "tags_all": {
              "Name": "terraform_vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "833185305640",
            "id": "vpc-0c2bada79d9f46e13",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}